// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`importProductFile handler should return the signed URL for upload 1`] = `
Object {
  "body": "{\\"url\\":\\"uploadUrl\\"}",
  "statusCode": 200,
}
`;

exports[`importProductFile handler should return validation message if the file name does not have .csv extension 1`] = `
Object {
  "body": "{\\"error\\":\\"'name' with value 'file-name.txt' fails to match the required pattern: /\\\\\\\\.csv$/\\"}",
  "statusCode": 400,
}
`;

exports[`importProductFile handler should return validation message if the length of the file name less than 5 symbols 1`] = `
Object {
  "body": "{\\"error\\":\\"'name' length must be at least 5 characters long\\"}",
  "statusCode": 400,
}
`;

exports[`importProductFile handler should return validation message if the length of the file name more than 20 symbols 1`] = `
Object {
  "body": "{\\"error\\":\\"'name' length must be less than or equal to 20 characters long\\"}",
  "statusCode": 400,
}
`;

exports[`importProductFile handler should return validation message in case of empty file name 1`] = `
Object {
  "body": "{\\"error\\":\\"'name' is required\\"}",
  "statusCode": 400,
}
`;
